Updated Gradle to latest version 2.13

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ buildscript {
     }
 }
 
+
+task createWrapper(type: Wrapper) { 
+	gradleVersion = "2.13" 
+}
+
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
